--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,62 @@ body {
 a {
   color: #00B7FF;
 }
+
+body {
+  padding: 30px;
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+}
+
+h2 {
+  margin:0 0 .5em 0;
+}
+
+a {
+  color: #00B7FF;
+}
+
+#wrapper {
+  padding-left:312px;
+  position:relative;
+}
+
+#taskList {
+  margin:0 0 30px 0;
+}
+  #taskList table {
+    border-collapse:separate;
+    border-spacing:1px;
+    background:#CCC;
+  }
+    #taskList table th {
+      background:#EEE;
+      font-weight:600;
+      padding:10px 20px;
+      text-align:center;
+    }
+    #taskList table tbody {
+      padding:0; margin:0;
+      border-collapse:collapse;
+      border-spacing:0px;
+    }
+      #taskList table td {
+        background:#FFF;
+        padding:5px 10px;
+        text-align:center;
+      }
+
+#taskInfo {
+  width:250px;
+  position:absolute;
+  top:0; left:0;
+}
+  #taskInfo p {
+    padding:15px;
+    border:1px solid #CCC;
+    background:rgba(80,120,255,0.05);
+  }
+
+fieldset {
+  border:0;
+  padding:0; margin:0;
+}
