Improved callbacks to frontend. Rewamped crawling part.

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,3 +1,5 @@
+include ./task_list.jade
+
 extends layout
 
 block content
@@ -7,56 +9,10 @@ block content
     .row
       .col-sm-6 
         // TASK LIST
-        h2 Task List
-        #taskList
-          table
-            thead
-              th Force crawl
-              th Url
-              th Crawl Frequency
-              th Last Crawl
-              th Delete 
-            tbody
-        // /TASK LIST
-
-        // ADD Task
-        #addTask
-          h2 Add Task
-          form(role='form')
-            .form-group.col-xs-8
-              label(for='inputTaskUrl') Url:
-              input#inputTaskUrl.form-control(type='txt', placeholder='Url to check')
-            .form-group.col-xs-3
-                label(for='inputTaskCrawlFrequency') Crawl Frequency:
-                  .dropdown
-                    button#inputTaskCrawlFrequency.btn.btn-default.dropdown-toggle(type='button', data-toggle='dropdown', aria-haspopup='true', aria-expanded='true')
-                      | Every day
-                      span.caret
-                    ul.dropdown-menu(aria-labelledby='inputTaskCrawlFrequency')
-                      li
-                        a(href='#') Every day
-                      li
-                        a(href='#') Every week
-                      li
-                        a(href='#') Every month
-          .row                  
-          button#btnAddTask.btn.btn-default(type='submit') Add Task          
+        include ./task_list.jade
 
       .col-sm-6 
-        // USER INFO
-        #urlInfo
-          h2 Url Info
-          p
-            strong Url:
-            |  <span id='urlUrl'></span>
-            br
-            strong Title:
-            |  <span id='urlTitle'></span>
-            br
-            strong LastCrawl:
-            |  <span id='urlLastCrawl'></span>
-            br
-        // /USER INFO
+        include ./crawl_list.jade
 
   // /WRAPPER
 
