--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -50,6 +50,31 @@ a {
         text-align:center;
       }
 
+#crawlList {
+  margin:0 0 30px 0;
+}
+  #crawlList table {
+    border-collapse:separate;
+    border-spacing:1px;
+    background:#CCC;
+  }
+    #crawlList table th {
+      background:#EEE;
+      font-weight:600;
+      padding:10px 20px;
+      text-align:center;
+    }
+    #crawlList table tbody {
+      padding:0; margin:0;
+      border-collapse:collapse;
+      border-spacing:0px;
+    }
+      #crawlList table td {
+        background:#FFF;
+        padding:5px 10px;
+        text-align:center;
+      }
+
 #taskInfo {
   width:250px;
   position:absolute;
