Added Status handling

--- a/views/crawl_list.jade
+++ b/views/crawl_list.jade
@@ -6,6 +6,7 @@ h2 Task List
       th Url
       th Crawl Frequency
       th Last Crawl
+      th Status      
       th Delete 
     tbody
 // /TASK LIST
