Openshift: modify Agenda configuration.

--- a/views/index.jade
+++ b/views/index.jade
@@ -4,7 +4,7 @@ extends layout
 
 block content
   h1= title
-  p Keep track of changed that might break your business
+  p Keep track of changes that might break your business
 
     .row
       .col-sm-4 
